[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Poem.gd" type="Script" id=1]
[ext_resource path="res://gfx/ui/panel.png" type="Texture" id=2]
[ext_resource path="res://fonts/MainTheme.tres" type="Theme" id=3]

[node name="Poem" type="Control"]
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 236.0
margin_top = 6.0
margin_right = 856.0
margin_bottom = 510.0
rect_min_size = Vector2( 400, 300 )
texture = ExtResource( 2 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 125.0
margin_top = 13.0
margin_right = 940.0
margin_bottom = 86.0
text = "Instructions appear here."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 90.0
margin_top = 62.0
margin_right = 130.0
margin_bottom = 102.0

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 300.0
margin_top = 131.0
margin_right = 803.0
margin_bottom = 425.0
show_line_numbers = true
context_menu_enabled = false
wrap_enabled = true
caret_blink = true
caret_moving_by_right_click = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warnings" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 124.0
margin_top = 89.0
margin_right = 942.0
margin_bottom = 126.0
text = "Warnings appear here."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="."]
margin_left = 399.0
margin_top = 446.0
margin_right = 530.0
margin_bottom = 480.0
text = "Submit poem"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Success" type="Label" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 478.0
margin_top = 432.0
margin_right = 596.0
margin_bottom = 460.0
text = "Check here!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rip" type="Button" parent="."]
margin_left = 584.0
margin_top = 446.0
margin_right = 745.0
margin_bottom = 480.0
text = "Tear out the page!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="AudioStreamPlayer" parent="."]

[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
[connection signal="pressed" from="Rip" to="." method="_on_Rip_pressed"]
